--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,16 @@
      box-sizing: border-box;
  }
 
+
+
+ h1 {
+     color: #00BFA5;
+     font-size: 6vw;
+ }
+
  .QuizApp {
      text-align: center;
+     border: 2px solid blue;
  }
 
  .optionStyle {
