--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,16 @@ h2 {
      }
  }
 
+ @media screen and (min-width: 1281px) {
+     h2 {
+         font-size: 3vw;
+         width: 50%;
+         margin-top: 2vh;
+         margin-bottom: 2vh;
+     }
+ }
+
+
 
  .titleCorrectAnswer {
     font-size: 6vw;
@@ -54,6 +64,13 @@ h2 {
      }
  }
 
+ @media screen and (min-width: 1281px) {
+     .titleCorrectAnswer {
+         font-size: 2vw;
+         width: 50%;
+     }
+ }
+
 li {
     font-size: 5vw;
     color: #00BFA5;
@@ -72,6 +89,14 @@ li {
  @media screen and (min-width: 1001px) and (max-width: 1280px) {
      li {
          font-size: 2vw;
+     }
+ }
+
+ @media screen and (min-width: 1281px) {
+     li {
+         font-size: 2vw;
+         padding: 0.5vw;
+         margin-left: 20vw;
      }
  }
 
@@ -97,16 +122,18 @@ li:last-child {
  @media screen and (min-width: 700px) and (max-width: 1000px) {
      .mainHeader {
          font-size: 6vw;
-         margin-top: 6vh;
-         margin-bottom: 6vh;
      }
  }
 
  @media screen and (min-width: 1001px) and (max-width: 1280px) {
      .mainHeader {
          font-size: 4vw;
-         margin-top: 6vh;
-         margin-bottom: 6vh;
+     }
+ }
+
+ @media screen and (min-width: 1281px) {
+     .mainHeader {
+         font-size: 3vw;
      }
  }
 
@@ -134,6 +161,13 @@ li:last-child {
      }
  }
 
+ @media screen and (min-width: 1281px) {
+     h1 {
+         font-size: 2vw;
+         width: 50%;
+     }
+ }
+
  span.numberOfQuestion {
      color: #003952;
      font-size: 5vw;
@@ -149,6 +183,12 @@ li:last-child {
  @media screen and (min-width: 1001px) and (max-width: 1280px) {
      span.numberOfQuestion {
          font-size: 3vw;
+     }
+ }
+
+ @media screen and (min-width: 1281px) {
+     span.numberOfQuestion {
+         font-size: 2vw;
      }
  }
 
@@ -169,6 +209,13 @@ li:last-child {
      .groupQuestion {
          margin-top: 5vw;
          margin-bottom: 5vh;
+     }
+ }
+
+ @media screen and (min-width: 1281px) {
+     .groupQuestion {
+         margin-top: 4vw;
+         margin-bottom: 4vh;
      }
  }
 
@@ -202,6 +249,16 @@ li:last-child {
      }
  }
 
+ @media screen and (min-width: 1281px) {
+     .optionStyle {
+         font-size: 2vw;
+         margin-top: 1vw;
+         margin-bottom: 1vw;
+         padding: 1vw;
+         width: 30%;
+     }
+ }
+
  .selected {
      margin: 0 auto;
      margin-top: 5vw;
@@ -227,6 +284,16 @@ li:last-child {
  @media screen and (min-width: 1001px) and (max-width: 1280px) {
      .selected {
          width: 40%;
+     }
+ }
+
+ @media screen and (min-width: 1281px) {
+     .selected {
+         margin-top: 1vw;
+         margin-bottom: 1vw;
+         padding-top: 1vw;
+         padding-bottom: 1vw;
+         width: 30%;
      }
  }
 
@@ -266,6 +333,14 @@ li:last-child {
      }
  }
 
+ @media screen and (min-width: 1281px) {
+     .buttonNext {
+         width: 16vw;
+         height: 5vw;
+         font-size: 2vw;
+     }
+ }
+
  .buttonNext:enabled{
      color: white;
  }
@@ -302,6 +377,14 @@ li:last-child {
          width: 20vw;
          height: 8vw;
          font-size: 3vw;
+     }
+ }
+
+ @media screen and (min-width: 1281px) {
+     .finishButton {
+         width: 16vw;
+         height: 5vw;
+         font-size: 2vw;
      }
  }
 
