--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ h2 {
     font-size: 6vw;
     font-weight: bold;
     margin: 0 auto;
-    margin-top: 6vh;
-    margin-bottom: 6vh;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
     text-align: center;
     width: 80%;
 }
@@ -59,14 +59,14 @@ h2 {
 
  @media screen and (min-width: 1001px) and (max-width: 1280px) {
      .titleCorrectAnswer {
-         font-size: 3vw;
+         font-size: 4vw;
          width: 60%;
      }
  }
 
  @media screen and (min-width: 1281px) {
      .titleCorrectAnswer {
-         font-size: 2vw;
+         font-size: 2.5vw;
          width: 50%;
      }
  }
@@ -74,7 +74,7 @@ h2 {
 li {
     font-size: 5vw;
     color: #00BFA5;
-    padding: 3vw;
+    padding: 1vw;
     font-weight: bold;
     border-radius: 5px;
     margin-left: 10vw;
@@ -88,7 +88,8 @@ li {
 
  @media screen and (min-width: 1001px) and (max-width: 1280px) {
      li {
-         font-size: 2vw;
+         font-size: 3vw;
+         margin-left: 15vw;
      }
  }
 
@@ -134,6 +135,8 @@ li:last-child {
  @media screen and (min-width: 1281px) {
      .mainHeader {
          font-size: 3vw;
+         margin-top: 4vh;
+         margin-bottom: 3vh;
      }
  }
 
